<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.lantoolblog.sample</groupId>
  <artifactId>spring-mvc-sample</artifactId>
  <name>${project.artifactId}</name>
  <packaging>war</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <spring.version>6.2.18</spring.version>
    <aspectj.version>1.9.25.1</aspectj.version>
    <slf4j.version>2.0.17</slf4j.version>
    <logback.version>1.5.32</logback.version>

    <jakarta-inject.version>2.0.1</jakarta-inject.version>
    <jakarta-servlet.version>6.1.0</jakarta-servlet.version>

    <!-- Lombok -->
    <lombok.version>1.18.46</lombok.version>

    <!-- Thymeleaf -->
    <thymeleaf.version>3.1.5.RELEASE</thymeleaf.version>
    <thymeleaf-layout-dialect.version>4.0.1</thymeleaf-layout-dialect.version>

    <!-- WebJars -->
    <webjars-locator-core.version>0.59</webjars-locator-core.version>
    <webjars-jquery.version>4.0.0</webjars-jquery.version>
    <webjars-bootstrap.version>5.3.8</webjars-bootstrap.version>

    <!-- Testing -->
    <junit.version>5.14.4</junit.version>
    <hamcrest.version>3.0</hamcrest.version>
    <assertj.version>3.27.7</assertj.version>
    <mockito.version>5.23.0</mockito.version>

    <!-- Maven Plugin Version -->
    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
    <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>

    <!-- Cargo Maven3 Plugin -->
    <cargo-maven3-plugin.version>1.10.27</cargo-maven3-plugin.version>
    <cargoContextPath>${project.artifactId}</cargoContextPath>

  </properties>


  <dependencies>
    <!-- Spring -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- AspectJ -->
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <version>${aspectj.version}</version>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <!-- @Inject -->
    <dependency>
      <groupId>jakarta.inject</groupId>
      <artifactId>jakarta.inject-api</artifactId>
      <version>${jakarta-inject.version}</version>
    </dependency>

    <!-- Servlet -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>${jakarta-servlet.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Thymeleaf -->
    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf-spring6</artifactId>
      <version>${thymeleaf.version}</version>
    </dependency>
    <dependency>
      <groupId>nz.net.ultraq.thymeleaf</groupId>
      <artifactId>thymeleaf-layout-dialect</artifactId>
      <version>${thymeleaf-layout-dialect.version}</version>
    </dependency>

    <!-- WebJars -->
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>webjars-locator-core</artifactId>
      <version>${webjars-locator-core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>${webjars-jquery.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>${webjars-bootstrap.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>${hamcrest.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <!-- The war file name is created as artifactId.war -->
    <finalName>${project.artifactId}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven-war-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <!-- cspell:disable -->
        <configuration>
          <compilerArgs>
            <arg>-Xlint:all</arg>            
            <arg>-Xlint:-processing</arg>
            <arg>-proc:full</arg>
          </compilerArgs>
          <parameters>true</parameters> <!-- https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
        <!-- cspell:enable -->
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.cargo</groupId>
        <artifactId>cargo-maven3-plugin</artifactId>
        <version>${cargo-maven3-plugin.version}</version>
        <configuration>
          <!-- cspell:disable -->
          <deployables>
            <deployable>
              <properties>
                <context>${cargoContextPath}</context>
              </properties>
            </deployable>
          </deployables>
          <!-- cspell:enable -->
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>